--- a/style.css
+++ b/style.css
@@ -82,12 +82,20 @@ body * {
 	z-index: 1;
 	transform: translateY(-50%);
 
+	animation: slide-out 0.4s;
+
 	cursor: pointer;
 }
 
 .light #switch button {
-	right: 0;
-	left: initial;
+	animation: slide-in 0.4s forwards;
+
+	/* right: 0;
+	left: initial; */
+}
+
+#switch button:hover {
+	outline: 8px solid var(--hightlight-color);
 }
 
 #switch span {
@@ -179,5 +187,23 @@ footer a {
 
 	.light {
 		--bg-url: url(./assets/bg-desktop-light.jpg);
+	}
+}
+
+@keyframes slide-in {
+	from {
+		left: 0;
+	}
+	to {
+		left: 50%;
+	}
+}
+
+@keyframes slide-out {
+	from {
+		left: 50%;
+	}
+	to {
+		left: 0;
 	}
 }
