few more img changes

--- a/style.css
+++ b/style.css
@@ -5,22 +5,22 @@
 }
 
 :root {
-  --text-color: black;
-  --bg-url: url(./assets/bg-mobile-light.jpg);
-  --stroke-color: rgba(0, 0, 0, 0.5);
-  --surface-color: rgba(0, 0, 0, 0.05);
-  --surface-color-hover: rgba(0, 0, 0, 0.02);
-  --hightlight-color: rgba(0, 0, 0, 0.1);
-  --switch-bg-url: url(./assets/sun.svg);
-}
-
-.dark {
-  --text-color: white;
-  --bg-url: url(./assets/bg-mobile.jpg);
+  --text-color: rgb(196, 170, 175);
+  --bg-url: url(./img/the-flash-mobile.jpg);
   --stroke-color: rgba(255, 255, 255, 0.5);
   --surface-color: rgba(255, 255, 255, 0.1);
   --surface-color-hover: rgba(255, 255, 255, 0.02);
   --hightlight-color: rgba(255, 255, 255, 0.2);
+  --switch-bg-url: url(./assets/sun.svg);
+}
+
+.dark {
+  --text-color: rgb(136, 123, 38);
+  --bg-url: url(./img/reverse-flash-mobile.jpg);
+  --stroke-color: rgba(0, 0, 0, 0.5);
+  --surface-color: rgba(0, 0, 0, 0.05);
+  --surface-color-hover: rgba(0, 0, 0, 0.02);
+  --hightlight-color: rgba(0, 0, 0, 0.1);
   --switch-bg-url: url(./assets/moon-stars.svg);
 }
 
@@ -125,9 +125,12 @@ ul li a {
   justify-content: center;
 
   padding: 16px 24px;
+
   text-decoration: none;
 
   background: var(--surface-color);
+  /* color: rgb(184, 168, 147); */
+
   border: 1px solid var(--stroke-color);
   border-radius: 8px;
 
@@ -182,11 +185,11 @@ footer a {
 
 @media (min-width: 768px) {
   :root {
-    --bg-url: url(./assets/bg-desktop.jpg);
+    --bg-url: url(./img/the-flash-desktop.jpg);
   }
 
   .dark {
-    --bg-url: url(./assets/bg-desktop-light.jpg);
+    --bg-url: url(./img/reverse-flash-desktop.jpg);
   }
 }
 
